# SlippyMap

./: .gitmodules  CMakeLists.txt  README.md  SlippyMap.pc.in
examples/: CMakeLists.txt
examples/simple-map/: CMakeLists.txt  simple-map.cpp
include/SlippyMap/: SlippyMap.h  SlippyMapAnimatedLayer.h  SlippyMapEllipse.h  SlippyMapLayer.h  SlippyMapLayerEllipse.h  SlippyMapLayerManager.h  SlippyMapLayerMarker.h  SlippyMapLayerMarkerPropertyPage.h  SlippyMapLayerObject.h  SlippyMapLayerObjectCommonPropertyPage.h  SlippyMapLayerObjectPropertyPage.h  SlippyMapLayerPath.h  SlippyMapLayerPolygon.h  SlippyMapLayerPolygonPropertyPage.h  SlippyMapWidget.h  SlippyMapWidgetLayer.h  SlippyMapWidgetMarker.h
src/: SlippyMap.cpp  SlippyMapAnimatedLayer.cpp  SlippyMapEllipse.cpp  SlippyMapLayer.cpp  SlippyMapLayerEllipse.cpp  SlippyMapLayerManager.cpp  SlippyMapLayerMarker.cpp  SlippyMapLayerMarkerPropertyPage.cpp  SlippyMapLayerObject.cpp  SlippyMapLayerObjectCommonPropertyPage.cpp  SlippyMapLayerObjectPropertyPage.cpp  SlippyMapLayerPath.cpp  SlippyMapLayerPolygon.cpp  SlippyMapLayerPolygonPropertyPage.cpp  SlippyMapWidget.cpp  SlippyMapWidgetLayer.cpp  SlippyMapWidgetMarker.cpp
